# pyrofs

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI.yml
python/pyrofs/: __init__.py  _pyrofs.pyi
src/: fs.rs  lib.rs  pytypes.rs  tree.rs
tests/: test_basic.py
